[package]
name = "transcode-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
aquamarine = "0.5"
async-priority-channel = "0.2.0"
async-tempfile = "0.5.0"
bytesize = "1.3.0"
clap = { version = "4.4.17", features = ["derive", "env"] }
educe = "0.5.11"
ffmpeg-sidecar = "0.5.1"
ffprobe = { git = "https://github.com/theduke/ffprobe-rs.git" }
futures = "0.3.30"
human-panic = "1.2.3"
humantime = "2.1.0"
indicatif = { version = "0.17.7", features = ["tokio"] }
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
shellexpand = { version = "3.1.0", features = ["path"] }
strum = { version = "0.26.0", features = ["phf", "strum_macros", "derive"] }
thread-priority = "0.15.1"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
