[package]
name = "transcode-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aquamarine = "0.5"
async-priority-channel = "0.2.0"
async-tempfile = "0.5.0"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
educe = "0.6.0"
ffmpeg-sidecar = { version = "1.1" }
ffprobe = "0.4.0"
futures = "0.3.30"
human-panic = "2"
humantime = "2.1.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
shellexpand = { version = "3.1.0", features = ["path"] }
strum = { version = "0.26.2", features = ["phf", "strum_macros", "derive"] }
tikv-jemallocator = "0.5.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
debug = true

[profile.dev]
opt-level = 1
